--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">I Am Poor</string>
     <string name="title">I Am Poor</string>
+    <string name="caption1">coal</string>
 </resources>
